[package]
name = "rust-redis-docker"
version = "0.1.3"
authors = ["Kevin Wang"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
bb8 = "0.4.2"
bb8-postgres = "0.4"
chrono = { version = "0.4", features = ["serde"] }
redis = { version = "0.16.0", features = ["connection-manager"] }
hyper = "0.13"
tokio = { version = "0.2", features = ["full", "macros"] }
tokio-postgres = { version = "0.5.5", features = [
  "with-uuid-0_8",
  "with-chrono-0_4"
] }
uuid = { version = "0.8", features = ["serde", "v4"] }
warp = "0.2"
pretty_env_logger = "*"
log = "*"
serde = { version = "1.0.114", features = ["rc"] }
serde_derive = "1.0.114"
futures = "0.3"

[dependencies.listenfd]
version = "0.3"

[source.crates-io]
replace-with = 'vendored-sources'

[source.vendored-sources]
directory = '/usr/src/app/vendor'

[[bin]]
name = "rust-redis-docker"
path = "src/main.rs"
